--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "/public/build"
   ],
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.18",
     "@prisma/client": "^4.9.0",
     "@remix-run/node": "^1.12.0",
     "@remix-run/react": "^1.12.0",
